# fax.frizzle.lol

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: docker-build-push.yaml
deploy/: fax.frizzle.lol.service
fax_frizzle/: __init__.py  fax.py  faxes.py  util.py
fax_frizzle/render/: engine.py  engine_test.py  wordwrap.py
